testing/tests/ui/let_destructuring_has_rest.stderr
error: unexpected `,` character after `..`
       note that in a named struct, `..` must come last to ignore other members
        --> <source attribute>:2:21
         |
       2 | {%- if let X { a, .., } = x -%}hello {{ a }}{%- endif -%}
         |                     ^ close to this token
         |
 --> tests/ui/let_destructuring_has_rest.rs:9:3
  |
9 | #[template(source = "
  |   ^^^^^^^^

error: expected `,` for more members, or `}` as terminator
 --> <source attribute>:2:18
  |
       2 | {%- if let X { a .. } = x -%}hello {{ a }}{%- endif -%}
         |                  ^ close to this token
         |
  --> tests/ui/let_destructuring_has_rest.rs:17:3
   |
17 | #[template(source = "
   |   ^^^^^^^^

error: expected member, or `}` as terminator
 --> <source attribute>:2:19
  |
       2 | {%- if let X { a, 1 } = x -%}hello {{ a }}{%- endif -%}
         |                   ^ close to this token
         |
  --> tests/ui/let_destructuring_has_rest.rs:25:3
   |
25 | #[template(source = "
   |   ^^^^^^^^

error: unexpected `,` character after `..`
       note that in a named struct, `..` must come last to ignore other members
        --> <source attribute>:2:21
         |
       2 | {%- if let X { a, .., b } = x -%}hello {{ a }}{%- endif -%}
         |                     ^ close to this token
         |
  --> tests/ui/let_destructuring_has_rest.rs:33:3
   |
33 | #[template(source = "
   |   ^^^^^^^^

error: unexpected `,` character after `..`
       note that in a named struct, `..` must come last to ignore other members
        --> <source attribute>:2:18
         |
       2 | {%- if let X { .., b } = x -%}hello {{ a }}{%- endif -%}
         |                  ^ close to this token
         |
  --> tests/ui/let_destructuring_has_rest.rs:41:3
   |
41 | #[template(source = "
   |   ^^^^^^^^
